# music-ai-toolshop

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CURRENT_STATE.md  HANDOFF.md  PROJECTS_INDEX.md  README.md  analyze_library.py  check_batch_status.py  create_playlists.py  diagnose_voice_analysis.py  generate_crhymetv_catalogue.py  library_cleanup.py  lyrics_export.json  lyrics_export.txt  output.json  production_analysis.db  pyproject.toml  recover_batch_status.py  requirements-web.txt  requirements.lock.txt  run_crhymetv_batch.ps1  run_crhymetv_chunk.ps1  run_crhymetv_smoke_test.ps1  run_papapedro_pilot.ps1  run_papapedro_pilot.py  run_reverse_engineering_batch.py  test_dll_load.cpp  tmp_lyrics_cluster.py  tmp_unique_descriptions.py  web_ui.py  workspace_structure.md
.go/: rules.md  state.txt
.streamlit/: config.toml
Genious_lyrics_extractor/: README.md  extract_artists.py  extract_batch2.py  intial_prompt.md
MAirina_Tucc/: LANGUAGE_TOOLS_SPEC.md  PRD.md  continuation_prompt.md  prompt.md
Stemmeca_alatkka/: LICENSE  README.md  process_kawasaki.py  process_kawasaki_fixed.py  prompts.md  requirements.txt  stems_direct.py
benchmarks/: stem_benchmark.py
daw-engine/: Cargo.toml  LIBRARY_API.md  build.rs  check_output.txt  test_output.txt  tracy_enabled.txt  tracy_test.txt  tracy_test2.txt  tracy_test_results.txt
daw-engine/benches/: engine_benchmarks.rs
daw-engine/docs/: DEV_FRAMEWORK_APPLICATION.md
daw-engine/examples/: audio_e2e_test.rs  python_integration_example.py  vst_plugin_integration_example.rs
daw-engine/include/: daw_engine.h  opendaw_engine.h
daw-engine/scripts/: evermem_integration.py  memory_cli.py
daw-engine/src/: ai_bridge.rs  api_server.rs  arrangement.rs  arrangement_ffi.rs  audio_device.rs  audio_processor.rs  automation.rs  automation_ffi.rs  callback.rs  circular_buffer.rs  clip_player.rs  clip_player_ffi.rs  clock.rs  disk_stream.rs  disk_streamer.rs  disk_streamer_ffi.rs  engine_ffi.rs  error.rs  export.rs  export_renderer.rs  ffi_bridge.rs  lib.rs  loop_markers.rs  loop_markers_ffi.rs  loudness.rs  memory_pool.rs  meter_ffi.rs  midi.rs  midi_edit.rs  midi_edit_ffi.rs  midi_ffi.rs  midi_input.rs  mixer.rs  mmm.rs  musicgen.rs  noise_suppression.rs  performance_analysis.rs  plugin.rs  plugin_clap.rs  plugin_ffi.rs  (+27 more)
daw-engine/src/future/: aubio.rs  audiowaveform.rs  autotalent.rs  calf.rs  caps.rs  clap_embed.rs  cloud_sync.rs  cycfiq.rs  ddsp.rs  deep_filter_net.rs  dexed.rs  dpf.rs  faust.rs  ffmpeg.rs  guitarix.rs  helm.rs  imgui_juce.rs  invada.rs  jack.rs  ladspa.rs  lame_mp3.rs  libflac.rs  libremidi.rs  lofi_ml.rs  lv2.rs  magenta_vae.rs  maximilian.rs  midifile.rs  miniaudio.rs  musepack.rs  musicbert.rs  obxd.rs  odin2.rs  opengl_shaders.rs  opus.rs  peaks.rs  portaudio.rs  rakarrack.rs  react_juce.rs  rnnoise.rs  (+13 more)
daw-engine/src/reverse_engineer/: delta.rs  fingerprint.rs  mod.rs  spectral.rs
daw-engine/tests/: audio_callback_test.rs  clip_launch_verification.rs  concurrency_test.rs  cpal_integration_test.rs  e2e_audio_output.rs  e2e_plugin_chain_audio.rs  e2e_tempo_automation_timing.rs  e2e_transport_workflow.rs  export_verification.rs  fuzz_test.rs  integration_ai_test.rs  integration_disk_streaming.rs  integration_fader_automation.rs  integration_meter_levels.rs  integration_midi_duplicate.rs  integration_midi_edit.rs  integration_midi_recording.rs  integration_midi_test.rs  integration_onboarding.rs  integration_playback_test.rs  integration_plugin_chain.rs  integration_stem_workflow.rs  integration_transport_ui.rs  limits_test.rs  loudness_test.rs  mixer_test.rs  noise_suppression_test.rs  sample_test.rs  session_test.rs  stress_test.rs  tracy_ci_integration.rs  tracy_integration.rs
docs/: 06-opendaw-postmortem.md  OPEN_SOURCE_71_ANALYSIS.md  assessment_2026-04-26.md  e2e_audio_verification.md  manual_testing_protocol.md  performance_analysis.md  plugin_ffi_patterns.md  tracy_profiling.md
hooks/: pre-push
lyrics_research/: README.md
music_ai_toolshop/: README.md  build.bat  (+7 more)
projects/06-opendaw/ui/: CMakeLists.txt
projects/06-opendaw/ui/src/PatternGen/: MmmFFI.cpp
ui/: CMakeLists.txt  README.md
ui/src/: Main.cpp  MainComponent.cpp  MainComponent.h
ui/src/Arrangement/: ArrangementClipComponent.cpp  ArrangementClipComponent.h  ArrangementTrack.cpp  ArrangementTrack.h  ClipEditorDialog.cpp  ClipEditorDialog.h
ui/src/Audio/: AudioEngineComponent.cpp  AudioEngineComponent.h
ui/src/Engine/: EngineBridge.cpp  EngineBridge.h
ui/src/Export/: ExportDialog.cpp  ExportDialog.h  ExportFFI.cpp  ExportFFI.h
ui/src/Mixer/: ChannelStrip.cpp  ChannelStrip.h  LevelMeterComponent.cpp  LevelMeterComponent.h  MixerPanel.cpp  MixerPanel.h
ui/src/Onboarding/: AudioTestDialog.cpp  AudioTestDialog.h  OnboardingComponent.cpp  OnboardingComponent.h  TutorialOverlay.cpp  TutorialOverlay.h  WelcomeDialog.cpp  WelcomeDialog.h
ui/src/PatternGen/: MmmFFI.h  PatternGeneratorDialog.cpp  PatternGeneratorDialog.h
ui/src/PianoRoll/: PianoRollComponent.cpp  PianoRollComponent.h
ui/src/PluginBrowser/: PluginBrowserComponent.cpp  PluginBrowserComponent.h
ui/src/PluginChain/: PluginChainDialog.cpp  PluginChainDialog.h
ui/src/Project/: DemoProjectLoader.cpp  DemoProjectLoader.h  ProjectManager.cpp  ProjectManager.h
ui/src/Recording/: RecordingPanel.cpp  RecordingPanel.h
ui/src/SessionView/: ClipSlotComponent.cpp  ClipSlotComponent.h  SceneLaunchComponent.cpp  SceneLaunchComponent.h  SessionGridComponent.cpp  SessionGridComponent.h  TrackHeaderComponent.cpp  TrackHeaderComponent.h
ui/src/Settings/: SettingsManager.cpp  SettingsManager.h
ui/src/StemExtraction/: StemExtractionDialog.cpp  StemExtractionDialog.h
ui/src/SunoBrowser/: SunoBrowserComponent.cpp  SunoBrowserComponent.h
ui/src/Tools/: VocalCleanupDialog.cpp  VocalCleanupDialog.h
ui/src/Transport/: LoopMarkersComponent.cpp  LoopMarkersComponent.h  PunchInOutPanel.cpp  PunchInOutPanel.h  TempoAutomationTrack.cpp  TempoAutomationTrack.h  TimeSignatureTrack.cpp  TimeSignatureTrack.h  TransportBar.cpp  TransportBar.h
(+457 files in other folders)
