[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "music-ai-toolshop"
version = "0.2.0"
description = "CLI toolshop to orchestrate Suno, BPM/key analysis, YouTube scraping/summarization, and track reverse engineering."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
audio = ["librosa>=0.10", "numpy>=1.20"]
youtube = ["yt-dlp>=2023.0"]
all = ["librosa>=0.10", "numpy>=1.20", "yt-dlp>=2023.0"]

[project.scripts]
toolshop = "toolshop.cli:main"
