[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "music-ai-toolshop"
version = "0.3.0"
description = "CLI toolshop to orchestrate Suno, BPM/key analysis, YouTube scraping/summarization, and track reverse engineering."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
audio = ["librosa>=0.10", "numpy>=1.20", "scipy>=1.10"]
youtube = ["yt-dlp>=2023.0"]
voice = ["librosa>=0.10", "numpy>=1.20", "scipy>=1.10", "praat-parselmouth>=0.4", "soundfile>=0.12"]
voice-full = ["librosa>=0.10", "numpy>=1.20", "scipy>=1.10", "praat-parselmouth>=0.4", "soundfile>=0.12", "crepe>=0.0.16", "tensorflow>=2.10"]
cleaning = ["librosa>=0.10", "numpy>=1.20", "scipy>=1.10", "soundfile>=0.12", "pyyaml>=6.0"]
track = ["librosa>=0.10", "numpy>=1.20", "scipy>=1.10", "yt-dlp>=2023.0", "matplotlib>=3.5", "soundfile>=0.12", "pydub>=0.25", "pyloudnorm>=0.1", "pyyaml>=6.0"]
track-full = ["librosa>=0.10", "numpy>=1.20", "scipy>=1.10", "yt-dlp>=2023.0", "matplotlib>=3.5", "soundfile>=0.12", "pydub>=0.25", "pyloudnorm>=0.1", "pyyaml>=6.0", "torch>=1.12", "torchcrepe>=0.0.22", "demucs>=4.0", "panns-inference>=0.1.0", "spleeter>=2.1.0; python_version<'3.12'", "madmom>=0.16.1; python_version<'3.12'", "basic-pitch; platform_system!='Windows'", "essentia; platform_system!='Windows'", "fastapi>=0.109.0", "uvicorn[standard]>=0.22.0"]
all = ["librosa>=0.10", "numpy>=1.20", "scipy>=1.10", "yt-dlp>=2023.0", "praat-parselmouth>=0.4", "soundfile>=0.12", "pyyaml>=6.0", "matplotlib>=3.5", "pydub>=0.25", "pyloudnorm>=0.1"]

[tool.setuptools.packages.find]
include = ["toolshop*"]

[project.scripts]
toolshop = "toolshop.cli:main"
